stop-gap, allow specify where new track goes

--- a/app/styles/components/_mix-builder/header.scss
+++ b/app/styles/components/_mix-builder/header.scss
@@ -1,11 +1,12 @@
-.MixBuilderHeader {
-
-}
-
 .MixBuilderHeader-input {
   text-align: center;
 }
 
 .MixBuilderHeader-right {
   text-align: right;
+}
+
+.MixBuilderHeader-positionInput {
+  display: inline-block;
+  width: 50px;
 }
